# Test_cuoi_ky_ros

./: README.md  six.urdf
seven/: CMakeLists.txt  package.xml
seven/launch/: display.launch  gazebo.launch
seven/meshes/: base_link.STL  link_lb.STL  link_lf.STL  link_rb.STL  link_rf.STL
seven/urdf/: seven.csv  seven.urdf
six/: CMakeLists.txt  README.md.save  package.xml  save.rviz
six/launch/: all_in_one.launch  boustrophedon.launch  gmapping.launch  navigation.launch  testmap.launch
six/scripts/: boustrophedon.py
six/urdf/: six.urdf
six/worlds/: testmap.world
